[project]
name = "pyFF"
version = "2.1.5"
readme = "README.rst"
description = "Federation Feeder"
requires-python = ">=3.7"
license = {file = "LICENSE"}

authors = [
  {name = "Leif Johansson", email = "leifj@sunet.se"},
  {name = "Fredrik Thulin", email = "redrik@thulin.net"},
  {name = "Enrique Pérez Arnaud"},
  {name = "Mikael Frykholm", email = "mifr@sunet.se"},
]
maintainers = [
  {name = "Mikael Frykholm", email = "mifr@sunet.se"}
]

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120
target-version = "py37"
[tool.ruff.format]
quote-style = "preserve"

[tool.build_sphinx]
source-dir = "docs/"
build-dir = "docs/build"
all_files = "1"

[tool.upload_sphinx]
upload-dir = "docs/build/html"
